feat: notification handler
