# api/route/notification_route.go
@@ -1,0 +1,14 @@
+package route
+
+import (
+	"github.com/gofiber/fiber/v3"
+	"github.com/janghanul090801/pico-backend/api/handler"
+	"github.com/janghanul090801/pico-backend/domain"
+)
+
+func NewNotificationRoute(app fiber.Router, service domain.NotificationUseCase) {
+	protected := app.Group("/protected")
+	protected.Get("/", handler.GetNotifications(service))
+	protected.Patch("/:id", handler.MarkNotificationAsRead(service))
+	protected.Get("/unread-count", handler.GetUnreadNotificationsCount(service))
+}
